<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/default_icons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/small_margin"
    android:paddingBottom="@dimen/small_margin">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggle_flash"
        style="@style/Widget.App.Button.LabeledIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/normal_margin"
        android:contentDescription="@string/toggle_flash"
        android:text="@string/flash_off"
        app:icon="@drawable/ic_flash_off_vector" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggle_timer"
        style="@style/Widget.App.Button.LabeledIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/normal_margin"
        android:contentDescription="@string/toggle_timer"
        android:text="@string/timer_off"
        app:icon="@drawable/ic_timer_off_vector" />

</LinearLayout>
