<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shutter_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@android:color/black" />

    <FrameLayout
        android:id="@+id/top_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/overlay_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/layout_top"
            layout="@layout/layout_top" />

    </FrameLayout>

    <TextSwitcher
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_options" />

    <View
        android:id="@+id/bottom_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/overlay_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/camera_mode_holder" />

    <RelativeLayout
        android:id="@+id/camera_mode_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/shutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/camera_mode_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@android:color/transparent"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout="@layout/tab_item_photo" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout="@layout/tab_item_video" />

        </com.google.android.material.tabs.TabLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/video_rec_curr_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/normal_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/recording_timer_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/shutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00:00"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/last_photo_video_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/view_last_media"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/shutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/shutter"
        app:layout_constraintTop_toTopOf="@id/shutter">

        <ImageView
            android:id="@+id/photos_icon"
            android:layout_width="@dimen/action_circle_size"
            android:layout_height="@dimen/action_circle_size"
            android:background="@drawable/camera_button_background"
            android:importantForAccessibility="no"
            android:padding="@dimen/tiny_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_photos_vector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:text="@string/photos"
            android:textAppearance="@style/TextAppearance.App.ActionLabel" />

    </LinearLayout>

    <ImageView
        android:id="@+id/shutter"
        android:layout_width="@dimen/shutter_size"
        android:layout_height="@dimen/shutter_size"
        android:contentDescription="@string/shutter"
        android:src="@drawable/ic_shutter_animated"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <LinearLayout
        android:id="@+id/flip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/toggle_camera"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/shutter"
        app:layout_constraintEnd_toStartOf="@id/shutter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shutter">

        <ImageView
            android:id="@+id/toggle_camera"
            android:layout_width="@dimen/action_circle_size"
            android:layout_height="@dimen/action_circle_size"
            android:background="@drawable/camera_button_background"
            android:importantForAccessibility="no"
            android:padding="@dimen/flip_icon_padding"
            android:src="@drawable/ic_flip_camera_vector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:text="@string/flip"
            android:textAppearance="@style/TextAppearance.App.ActionLabel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
